objects/DQL_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Qualified Leads</relationshipLabel>
        <relationshipName>DQL_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Qualified_Lead__c</fullName>
        <label>Data Qualified Lead</label>
        <referenceTo>Data_Qualified_Lead__c</referenceTo>
        <relationshipLabel>DQL Contacts</relationshipLabel>
        <relationshipName>DQL_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <inlineHelpText>Contact phone number</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Responsibility__c</fullName>
        <label>Project Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;E</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>C/M</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Contracts Administrator</fullName>
                </value>
                <value>
                    <fullName>Design-Build</fullName>
                </value>
                <value>
                    <fullName>Design Engineering</fullName>
                </value>
                <value>
                    <fullName>E&amp;C</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>Estimating</fullName>
                </value>
                <value>
                    <fullName>G/C</fullName>
                </value>
                <value>
                    <fullName>Inspection/Validation/Start Up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Planning &amp; Scheduling</fullName>
                </value>
                <value>
                    <fullName>Procurement - Purchasing</fullName>
                </value>
                <value>
                    <fullName>Project Director</fullName>
                </value>
                <value>
                    <fullName>Project Executive</fullName>
                </value>
                <value>
                    <fullName>Project Financing</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Real Estate Developer</fullName>
                </value>
                <value>
                    <fullName>Specification and Reliability</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>Technology Provider</fullName>
                </value>
                <value>
                    <fullName>Turn-Key</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <inlineHelpText>Contact Title</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>DQL Contact</label>
    <nameField>
        <displayFormat>DQL Contact - {000000}</displayFormat>
        <label>DQL Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DQL Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>